Fixed spacing in playerCards

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,8 @@
 
 #teamLogo {
   margin-bottom: 5rem;
+  height: 200px;
+  width: 200px;
 }
 
 .teamPage-container {
@@ -33,12 +35,11 @@
 
 #playerCard {
     width: 20rem;
-    height: 25rem;
     display:inline-block;
     text-align: center;
     margin: auto;
     margin-bottom: 8rem;
-
+    color: var(--teamColor);
     /* test */
     position: relative;
 
@@ -97,6 +98,10 @@
   font-size: 0.8em;
 }
 
+.stat-title-text {
+  color: blue;
+}
+
 .fa {
     font-size: 20px !important;
 }
@@ -122,7 +127,8 @@
 
 /* Social Media Icon Styling */
 .icon-bar {
-  margin-top: 8em;
+  margin-top: 1.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .btn-social {
